--- a/app/views/training_platform/tasks/index.html.erb
+++ b/app/views/training_platform/tasks/index.html.erb
@@ -12,7 +12,7 @@
       <script type="text/javascript">
         try{ace.settings.check('sidebar' , 'fixed')}catch(e){}
       </script>
-
+      
       <div class="project_name">
         <span class="project_name_t">这里是项目名称</span>
       </div>
@@ -26,7 +26,7 @@
         </li>
 
         <li>
-          <a href="typography.html">
+          <a href="#">
             <i class="icon-text-width"></i>
             <span class="menu-text"> 文字排版 </span>
           </a>
@@ -42,81 +42,24 @@
 
           <ul class="submenu">
             <li>
-              <a href="elements.html">
+              <a href="#">
                 <i class="icon-double-angle-right"></i>
-                组件
+                待办中（0）
               </a>
             </li>
 
             <li>
-              <a href="buttons.html">
+              <a href="#">
                 <i class="icon-double-angle-right"></i>
-                按钮 &amp; 图表
+                进行中（0）
               </a>
             </li>
 
             <li>
-              <a href="treeview.html">
+              <a href="#">
                 <i class="icon-double-angle-right"></i>
-                树菜单
+               已完成（0）
               </a>
-            </li>
-
-            <li>
-              <a href="jquery-ui.html">
-                <i class="icon-double-angle-right"></i>
-                jQuery UI
-              </a>
-            </li>
-
-            <li>
-              <a href="nestable-list.html">
-                <i class="icon-double-angle-right"></i>
-                可拖拽列表
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="dropdown-toggle">
-                <i class="icon-double-angle-right"></i>
-
-                三级菜单
-                <b class="arrow icon-angle-down"></b>
-              </a>
-
-              <ul class="submenu">
-                <li>
-                  <a href="#">
-                    <i class="icon-leaf"></i>
-                    第一级
-                  </a>
-                </li>
-
-                <li>
-                  <a href="#" class="dropdown-toggle">
-                    <i class="icon-pencil"></i>
-
-                    第四级
-                    <b class="arrow icon-angle-down"></b>
-                  </a>
-
-                  <ul class="submenu">
-                    <li>
-                      <a href="#">
-                        <i class="icon-plus"></i>
-                        添加产品
-                      </a>
-                    </li>
-
-                    <li>
-                      <a href="#">
-                        <i class="icon-eye-open"></i>
-                        查看商品
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
             </li>
           </ul>
         </li>
@@ -131,16 +74,16 @@
 
           <ul class="submenu">
             <li>
-              <a href="tables.html">
+              <a href="#">
                 <i class="icon-double-angle-right"></i>
-                简单 &amp; 动态
+                任务1
               </a>
             </li>
 
             <li>
-              <a href="jqgrid.html">
+              <a href="#">
                 <i class="icon-double-angle-right"></i>
-                jqGrid plugin
+               任务2
               </a>
             </li>
           </ul>
@@ -156,37 +99,51 @@
 
           <ul class="submenu">
             <li>
-              <a href="form-elements.html">
-                <i class="icon-double-angle-right"></i>
-                表单组件
-              </a>
-            </li>
+                        <a href="#">
+                          <i class="icon-double-angle-right"></i>
+                          李毅杰（大师）
+                        </a>
+                      </li>
 
-            <li>
-              <a href="form-wizard.html">
-                <i class="icon-double-angle-right"></i>
-                向导提示 &amp; 验证
-              </a>
-            </li>
+                      <li>
+                        <a href="#">
+                          <i class="icon-double-angle-right"></i>
+                          崔军伟（工程师）
+                        </a>
+                      </li>
 
-            <li>
-              <a href="wysiwyg.html">
-                <i class="icon-double-angle-right"></i>
-                编辑器
-              </a>
-            </li>
+                      <li>
+                        <a href="#">
+                          <i class="icon-double-angle-right"></i>
+                          樊伟（工程师）
+                        </a>
+                      </li>
 
-            <li>
-              <a href="dropzone.html">
-                <i class="icon-double-angle-right"></i>
-                文件上传
-              </a>
-            </li>
+                      <li>
+                        <a href="#">
+                          <i class="icon-double-angle-right"></i>
+                          陈博
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="#">
+                          <i class="icon-double-angle-right"></i>
+                          曹子莹
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="#">
+                          <i class="icon-double-angle-right"></i>
+                          张留刚
+                        </a>
+                      </li>
           </ul>
         </li>
 
         <li>
-          <a href="calendar.html">
+          <a href="#">
             <i class="icon-calendar"></i>
 
             <span class="menu-text">
@@ -245,24 +202,29 @@
                 <!-- PAGE CONTENT BEGINS -->
                 <div class="col-xs-6 ace_content_left_title">
                   <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                  <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加项目
+                  <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span><span class="ace_plus_word">添加项目</span>
                   </a>
                 </div>
+                <!-- begin right-title -->
                 <div class="col-xs-6 ace_content_right_title">
-                <form class="form-search">
-                <span class="input-icon">
-                    <input type="text" placeholder="请输入关键字" class="nav-search-input" id="nav-search-input" autocomplete="off" />
-                    <i class="icon-search nav-search-icon"></i>
-                </span>
-                <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                  <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
-                </a>
-                <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                  <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
-                </a>
-                </form><!-- #nav-search -->
+                    <div class="col-xs-7 ace-serch">
+                        <form class="form-search col-xs-12 ace-form-serch">
+                        <span class="input-icon">
+                        <input type="text" placeholder="请输入关键字" class="nav-search-input" id="nav-search-input" autocomplete="off" />
+                        <i class="icon-search nav-search-icon"></i>
+                        </span>
+                        </form><!-- #nav-search -->
+                    </div>
+                    <div class="col-xs-5">
+                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                        <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
+                        </a>
+                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                        <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
+                        </a>
+                    </div>
                 </div>
-
+                <!-- end right-title -->
                 <div class="col-xs-6 ace_content_page_left">
                   <div class="my-task">
                     <h3>我的任务</h3>
@@ -328,13 +290,8 @@
                 </div>
 
                 <div class="col-xs-6 ace_content_page_right">
-                  33333333
-                </div>
-                
-
-
-
-                
+                3333333
+                </div>     
               <!-- PAGE CONTENT ENDS -->
             </div>
           </div><!-- /.col -->
@@ -347,4 +304,17 @@
     <i class="icon-double-angle-up icon-only bigger-110"></i>
   </a>
 </div>
-
+<script type="text/javascript">
+      jQuery(function($){
+      
+        $('.dd').nestable();
+      
+        $('.dd-handle a').on('mousedown', function(e){
+          e.stopPropagation();
+        });
+        
+        $('[data-rel="tooltip"]').tooltip();
+      
+      });
+    </script>
+  <div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
