--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -25,6 +25,10 @@
       color: #fff;
     }
 
+    .yellow-start {
+      color: orange;
+    }
+
     .project-set-btn {
       display: inline;
       ul.dropdown-menu{
