--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -38,6 +38,8 @@
         li {
           a {
             color: #000;
+            padding-top: 5px;
+            padding-bottom: 5px;
           }
         }
       } 
