--- a/app/views/training_platform/home/index.html.erb
+++ b/app/views/training_platform/home/index.html.erb
@@ -47,7 +47,7 @@
                 <!-- end sidebar-shortcuts -->
 
                <div class="project_name">
-               <span class="project_name_t">我的项目</span>
+               <span class="project_name_t"><%= current_user.nickname %></span>
                </div>
                 <!-- begin nav-list -->
                 <ul class="nav nav-list ace-nav-left">
