--- a/app/views/training_platform/projects/_left_nav.html.erb
+++ b/app/views/training_platform/projects/_left_nav.html.erb
@@ -4,7 +4,7 @@
     </script>
 
     <div class="project_name">
-      <span class="project_name_t">我的项目</span>
+      <span class="project_name_t"><%= current_user.nickname %></span>
     </div>
 
     <ul class="nav nav-list ace-nav-left">
