--- a/app/views/training_platform/tasks/index.html.erb
+++ b/app/views/training_platform/tasks/index.html.erb
@@ -14,7 +14,7 @@
       </script>
       
       <div class="project_name">
-        <span class="project_name_t">这里是项目名称</span>
+        <span class="project_name_t">项目名称</span>
       </div>
 
       <ul class="nav nav-list ace-nav-left">
