--- a/app/views/training_platform/tasks/index.html.erb
+++ b/app/views/training_platform/tasks/index.html.erb
@@ -8,192 +8,7 @@
       <span class="menu-text"></span>
     </a>
 
-    <div class="sidebar" id="sidebar">
-      <script type="text/javascript">
-        try{ace.settings.check('sidebar' , 'fixed')}catch(e){}
-      </script>
-      
-      <div class="project_name">
-        <span class="project_name_t">项目名称</span>
-      </div>
-
-      <ul class="nav nav-list ace-nav-left">
-        <li class="active">
-          <a href="index.html">
-            <i class="icon-dashboard"></i>
-            <span class="menu-text"> 公告信息 </span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <i class="icon-text-width"></i>
-            <span class="menu-text"> 文字排版 </span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#" class="dropdown-toggle">
-            <i class="icon-desktop"></i>
-            <span class="menu-text"> 我的任务 </span>
-
-            <b class="arrow icon-angle-down"></b>
-          </a>
-
-          <ul class="submenu">
-            <li>
-              <a href="#">
-                <i class="icon-double-angle-right"></i>
-                待办中（0）
-              </a>
-            </li>
-
-            <li>
-              <a href="#">
-                <i class="icon-double-angle-right"></i>
-                进行中（0）
-              </a>
-            </li>
-
-            <li>
-              <a href="#">
-                <i class="icon-double-angle-right"></i>
-               已完成（0）
-              </a>
-            </li>
-          </ul>
-        </li>
-
-        <li>
-          <a href="#" class="dropdown-toggle">
-            <i class="icon-list"></i>
-            <span class="menu-text"> 任务列表 </span>
-
-            <b class="arrow icon-angle-down"></b>
-          </a>
-
-          <ul class="submenu">
-            <li>
-              <a href="#">
-                <i class="icon-double-angle-right"></i>
-                任务1
-              </a>
-            </li>
-
-            <li>
-              <a href="#">
-                <i class="icon-double-angle-right"></i>
-               任务2
-              </a>
-            </li>
-          </ul>
-        </li>
-
-        <li>
-          <a href="#" class="dropdown-toggle">
-            <i class="icon-edit"></i>
-            <span class="menu-text"> 团队成员 </span>
-
-            <b class="arrow icon-angle-down"></b>
-          </a>
-
-          <ul class="submenu">
-            <li>
-                        <a href="#">
-                          <i class="icon-double-angle-right"></i>
-                          李毅杰（大师）
-                        </a>
-                      </li>
-
-                      <li>
-                        <a href="#">
-                          <i class="icon-double-angle-right"></i>
-                          崔军伟（工程师）
-                        </a>
-                      </li>
-
-                      <li>
-                        <a href="#">
-                          <i class="icon-double-angle-right"></i>
-                          樊伟（工程师）
-                        </a>
-                      </li>
-
-                      <li>
-                        <a href="#">
-                          <i class="icon-double-angle-right"></i>
-                          陈博
-                        </a>
-                      </li>
-
-                      <li>
-                        <a href="#">
-                          <i class="icon-double-angle-right"></i>
-                          曹子莹
-                        </a>
-                      </li>
-
-                      <li>
-                        <a href="#">
-                          <i class="icon-double-angle-right"></i>
-                          张留刚
-                        </a>
-                      </li>
-          </ul>
-        </li>
-
-        <li>
-          <a href="#">
-            <i class="icon-calendar"></i>
-
-            <span class="menu-text">
-              日历
-              <span class="badge badge-transparent tooltip-error" title="2&nbsp;Important&nbsp;Events">
-                <i class="icon-warning-sign red bigger-130"></i>
-              </span>
-            </span>
-          </a>
-        </li>
-
-        <div class="sidebar-shortcuts" id="sidebar-shortcuts">
-          <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-            <button class="btn btn-success">
-              <i class="icon-signal"></i>
-            </button>
-
-            <button class="btn btn-info">
-              <i class="icon-pencil"></i>
-            </button>
-
-            <button class="btn btn-warning">
-              <i class="icon-group"></i>
-            </button>
-
-            <button class="btn btn-danger">
-              <i class="icon-cogs"></i>
-            </button>
-          </div>
-
-          <div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
-            <span class="btn btn-success"></span>
-
-            <span class="btn btn-info"></span>
-
-            <span class="btn btn-warning"></span>
-
-            <span class="btn btn-danger"></span>
-          </div>
-        </div><!-- #sidebar-shortcuts -->
-      </ul><!-- /.nav-list -->
-
-      <div class="sidebar-collapse" id="sidebar-collapse">
-        <i class="icon-double-angle-left" data-icon1="icon-double-angle-left" data-icon2="icon-double-angle-right"></i>
-      </div>
-
-      <script type="text/javascript">
-        try{ace.settings.check('sidebar' , 'collapsed')}catch(e){}
-      </script>
-    </div>
+    <%= render 'training_platform/share/left_nav'%>
 
     <div class="main-content">
       <div class="page-content">
