--- a/app/views/layouts/training_platform.html.erb
+++ b/app/views/layouts/training_platform.html.erb
@@ -14,6 +14,7 @@
   <%= yield :banner %>
   <%= yield %>
   <%= render partial: 'share/devise_form' %>
+  <%= render partial: 'share/training_platform_modal' %>
   <%= yield :scripts %>
 </body>
 </html>
