--- a/app/views/training_platform/projects/new.js.erb
+++ b/app/views/training_platform/projects/new.js.erb
@@ -1,2 +1,2 @@
-$("#deviseUserFormModal").html("<%= escape_javascript(render 'training_platform/projects/form') %>");
-$("#deviseUserModal").modal('show');
+$("#trainingPlatformModalContent").html("<%= escape_javascript(render 'training_platform/projects/form') %>");
+$("#trainingPlatformModal").modal('show');
