--- a/app/views/training_platform/tasks/index.html.erb
+++ b/app/views/training_platform/tasks/index.html.erb
@@ -161,12 +161,13 @@
 										</ul>
 									</div>
 								</div>
-							</div><br>
+							</div>
+                                                        <div class="col-xs-12">
 							<div class="col-xs-4 a-col">
 								<h4>业务需求讨论</h4>
 							</div>
 							<div class="dropdown col-xs-8">
-								<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+								<button class="my-btn my-blue btn btn-default dropdown-toggle right_dm1" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 									待办中
 									<span class="caret my-caret"></span>
 								</button>
@@ -176,15 +177,13 @@
 									<li><a href="#">Some</a></li>
 									<li><a href="#">link</a></li>
 								</ul>
-							</div><br>
-							<div class="col-xs-12">
+							</div>
+                                                        </div>
+							<div class="col-xs-12 task_t">
 								<form class="form-horizontal">
 									<div class="form-group">
 										<div class="col-xs-8">
 											<input type="email" class="form-control" id="inputEmail3" placeholder="请输入任务描述或者任务标签">
-										</div>
-										<div class="col-xs-2">
-											<botton class="btn btn-default submit-btn">描述提交</botton>
 										</div>
 										<div class="col-xs-2">
 											<botton class="btn btn-default">添加标签</botton>
@@ -192,7 +191,8 @@
 									</div>
 								</form>
 							</div>
-							<div class="dropdown">
+                                                        <div class="col-xs-12 task_d">
+							<div class="dropdown col-xs-4">
 								<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 									请选择协作者
 									<span class="caret my-caret"></span>
@@ -204,7 +204,12 @@
 									<li><a href="#">link</a></li>
 								</ul>
 							</div>
-							<button type="submit" class="btn btn-default">确认提交</button>
+                                                        <div class="col-xs-2">
+                                                          <button type="submit" class="btn btn-default">确认提交</button>
+                                                        </div>
+                                                        </div>
+                                                        <h5>1、这里是任务的描述这里是任务的描述这里是任务的描述</h5>
+                                                        <h5>1、这里是任务的描述这里是任务的描述这里是任务的描述</h5>
 							<div class="col-xs-12 my-task">
 								<h3>任务动态</h3>
 								<hr class="my-line">
