--- a/app/views/share/_training_platform_modal.html.erb
+++ b/app/views/share/_training_platform_modal.html.erb
@@ -1,7 +1,7 @@
 <div class="modal fade devise-modal" tabindex="-1" role="dialog" id="trainingPlatformModal">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
-      <div id="trainingPlatformModalContent" class="user-devise-form">
+      <div id="trainingPlatformModalContent" class="tp-user-devise-form">
         
       </div>
     </div>
