--- a/app/views/training_platform/share/_left_nav.html.erb
+++ b/app/views/training_platform/share/_left_nav.html.erb
@@ -22,7 +22,7 @@
           </a>
         </li>
 
-        <li class="<%= 'active' if params[:controller] == "training_platform/tasks"%>">
+        <li class="<%= 'active' if params[:controller] == "training_platform/task_categories"%>">
           <a href="#" class="dropdown-toggle">
             <i class="icon-tasks"></i>
             <span class="menu-text"> 任务列表 </span>
@@ -71,7 +71,7 @@
 
         <div class="sidebar-shortcuts" id="sidebar-shortcuts">
           <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-            <%= link_to( new_training_platform_project_task_category_path, "data-toggle" => "tooltip", "data-placement" => "opt", title: "新建任务列表", class: "btn btn-success") do %>
+            <%= link_to( new_training_platform_project_task_category_path, "data-toggle" => "tooltip", "data-placement" => "opt", title: "新建任务列表", class: "btn btn-success", format: :js, remote: true) do %>
               <i class="icon-tasks"></i>
             <% end %>
 
