--- a/app/views/share/_training_platform_modal.html.erb
+++ b/app/views/share/_training_platform_modal.html.erb
@@ -1,5 +1,5 @@
 <div class="modal fade devise-modal" tabindex="-1" role="dialog" id="trainingPlatformModal">
-  <div class="modal-dialog modal-sm">
+  <div class="modal-dialog modal-md">
     <div class="modal-content">
       <div id="trainingPlatformModalContent" class="tp-user-devise-form">
         
