add user_projects controller

--- a/app/views/training_platform/share/_left_nav.html.erb
+++ b/app/views/training_platform/share/_left_nav.html.erb
@@ -75,9 +75,9 @@
               <i class="icon-tasks"></i>
             <% end %>
 
-            <%= link_to( "#", "data-toggle" => "tooltip", "data-placement" => "opt", title: "新建任务", class: "btn btn-info") do %>
-              <i class="icon-plus"></i>
-            <% end %>
+            <%#= link_to( "#", "data-toggle" => "tooltip", "data-placement" => "opt", title: "新建任务", class: "btn btn-info") do %>
+              <!-- <i class="icon-plus"></i> -->
+            <%# end %>
 
             <%= link_to( "#", "data-toggle" => "tooltip", "data-placement" => "opt", title: "邀请团队成员", class: "btn btn-warning") do %>
               <i class="icon-group"></i>
@@ -91,7 +91,7 @@
           <div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
             <span class="btn btn-success"></span>
 
-            <span class="btn btn-info"></span>
+            <!-- <span class="btn btn-info"></span> -->
 
             <span class="btn btn-warning"></span>
 
