--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -119,10 +119,10 @@
   }
 }
 .my-task{
-	padding: 0 10px;
 	font-weight: bold;
 	.my-line{
 		border-color: #A4A4A4;
+                margin: 10px 0;
 	}
 }
 .my-progress{
